[FIX] web: clipped dropdown on firefox in list views
On firefox and safari applying a position-sticky on an element inside
an other element with an overflow is causing a rendering issue.

This was occuring with the dropdown `.o_optional_columns_dropdown`
making it unusable as soon as the `overflow-x` triggered the horizontal
scroll in the table.

Since the thead is in a position-sticky from >=16.1 we can't rely on the
positioning to move the dropdown. The component itself is moved above
the `<thead>` in the DOM and then use its positioning to refer to the
`o_field_x2many.o_field_x2many_list` avoiding the overflow that was 
breaking the rendering.

Note: The scrollbar ends up behind the `<thead>` with this change.

task-3696473

X-original-commit: 01cd6d4d0cfa418f5a72a90742d10ee44af523a4

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -935,6 +935,10 @@
             padding: 3px;
             color: $o-main-text-color;
         }
+
+        .o_optional_columns_dropdown {
+            padding: $table-cell-padding-y-sm $o-horizontal-padding $table-cell-padding-x-sm $table-cell-padding-y-sm;
+        }
     }
     .o_form_readonly .o_field_widget .o_list_renderer .o_row_handle {
         display: none;  // Hide the handler in non-edit mode
@@ -966,6 +970,12 @@
             max-width: 300px;
         }
     }
+
+    // Required to position the .o_optional_columns_dropdown
+    .o_field_x2many_list {
+        position: relative;
+    }
+
     @include media-breakpoint-down(md) {
         .o_cp_buttons {
             width: 100%;
